WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232036
[iOS] Zooming out should use the page's background color instead of fading
https://bugs.webkit.org/show_bug.cgi?id=232036
Summary
[iOS] Zooming out should use the page's background color instead of fading
Devin Rousso
Reported
2021-10-20 12:47:15 PDT
.
Attachments
Patch
(1.54 KB, patch)
2021-10-20 12:49 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2021-10-20 12:47:32 PDT
<
rdar://problem/81926190
>
Radar WebKit Bug Importer
Comment 2
2021-10-20 12:48:08 PDT
<
rdar://problem/84474950
>
Devin Rousso
Comment 3
2021-10-20 12:49:12 PDT
Created
attachment 441920
[details]
Patch
Devin Rousso
Comment 4
2021-10-20 12:49:54 PDT
<
rdar://problem/81926190
>
EWS
Comment 5
2021-10-21 10:59:01 PDT
Committed
r284625
(
243346@main
): <
https://commits.webkit.org/243346@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 441920
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug