[iOS] Zooming out should use the page's background color instead of fading https://bugs.webkit.org/show_bug.cgi?id=232036 <rdar://problem/81926190>

Reviewed by Tim Horton.

* UIProcess/API/ios/WKWebViewIOS.mm:
(scrollViewBackgroundColor):


Canonical link: https://commits.webkit.org/243346@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284625 268f45cc-cd09-0410-ab3c-d52691b4dbfc